# kodo

./: .editorconfig  .gitignore  .npmignore  .pre-commit-config.yaml  AGENTS.md  ALL_PRS_READY.md  ANALYSIS.md  CLAUDE.md  COMMIT_TO_PR_MAPPING.md  CYCLE_1_ANALYSIS.md  CYCLE_2_PLAN.md  CYCLE_3_PLAN.md  DESIGNER_BROWSER_USAGE.md  IMPROVEMENTS.md  IMPROVEMENTS_AUDIT.md  IMPROVEMENTS_GUIDE.md  IMPROVEMENTS_SUMMARY.md  INCREMENTAL_IMPROVEMENTS.md  KODO_2_0_ARCHITECTURE.md  KODO_2_0_COMPLETE.md  KODO_2_0_DEPLOYMENT.md  KODO_2_0_README.md  KODO_2_0_VERIFIED.md  KODO_PRODUCTION_READY_REPORT.md  KODO_UI_SUMMARY.md  PR_1_DESCRIPTION.md  PR_2_DESCRIPTION.md  PR_3_DESCRIPTION.md  PR_4_DESCRIPTION.md  PR_5_DESCRIPTION.md  PR_6_DESCRIPTION.md  PR_CREATION_INDEX.md  README.md  SUBAGENT_COMPLETION_REPORT.md  VERIFY_KODO_2_0.md  goal-continuous.md  goal-example.md  goal-self-verify.md  goal-simple.md  goal-td-game.md  (+9 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.kodo/: ci-results.txt
docs/: architecture-cleanup.md  providers.md
examples/: naive_loop.py
improvements/: benchmark.py  benchmark_framework.py  c1.py  c10.py  c11.py  c2.py  c3.py  c4.py  c5.py  c6.py  c7.py  c8.py  c9.py  cycle_1.py  error_recovery.py  full_team_structure.py  impl_0_1771603201.py  impl_100_1771602700.py  impl_101_1771602705.py  impl_102_1771602710.py  impl_103_1771602721.py  impl_104_1771602781.py  impl_105_1771602841.py  impl_106_1771602901.py  impl_107_1771602961.py  impl_108_1771603021.py  impl_109_1771603081.py  impl_10_1771603801.py  impl_11.py  impl_110_1771603141.py  impl_12.py  impl_13.py  impl_14_1771604041.py  impl_15_1771602089.py  impl_16_1771602094.py  impl_17_1771604221.py  impl_18.py  impl_19_1771602241.py  impl_1_1771603261.py  impl_2.py  (+34 more)
kodo/: Procfile  __init__.py  __main__.py  agent.py  agent_communication.py  agent_performance.py  api_generator.py  app_scaffolder.py  cli.py  configuration_manager.py  cost_tracker.py  database_schema_generator.py  dependency_planner.py  divergence_converge.py  errors.py  factory.py  failure_predictor.py  log.py  (+20 more)
kodo-ui/: .gitignore  README.md  SETUP.md  middleware.ts  package.json  tailwind.config.js  tsconfig.json
(+170 files in other folders)
