[project]
name = "kodo"
version = "0.4.2"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.36",
    "mcp>=1.0",
    "python-dotenv>=1.0",
    "simple-term-menu>=1.6",
    "pydantic-ai>=1.0",
    "summarization-pydantic-ai>=0.0.3",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["kodo*"]

[tool.setuptools.package-data]
kodo = ["*.html"]

[project.scripts]
kodo = "kodo.cli:main"
