[project]
name = "kodo"
version = "0.4.23"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.36",
    "mcp>=1.0",
    "python-dotenv>=1.0",
    "questionary>=2.0",
    "pydantic-ai>=1.0",
    "summarization-pydantic-ai>=0.0.3",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
    "live: tests that call real backends (require local auth, run with: pytest -m live)",
]

[tool.setuptools.packages.find]
include = ["kodo*"]

[tool.setuptools.package-data]
kodo = ["*.html"]

[project.scripts]
kodo = "kodo.cli:main"
